# navop-extensions

./: .gitignore  2026-06-14-extension-repository-split.md  Cargo.toml  README.md  README.zh-CN.md  go.mod  go.sum  manifest.json  rustfmt.toml
.codex/skills/connection-import-wasm/: SKILL.md
.codex/skills/ipc-driver-development/: SKILL.md
.codex/skills/ssh-connection-import/: SKILL.md
.github/workflows/: ci.yml  release.yml  upload-r2.yml
cmd/dm-ipc-driver/: main.go  register_dm.go
cmd/iotdb-ipc-driver/: main.go
cmd/kingbase-ipc-driver/: main.go  register_kingbase.go
cmd/oceanbase-ipc-driver/: main.go
cmd/oracle-go-ipc-driver/: main.go
docs/superpowers/plans/: 2026-07-04-termius-import-complete.md  2026-07-05-navicat-lite-and-openssh-importers.md  2026-07-05-tree-sitter-language-bundle.md  2026-07-08-opencode-acp.md  2026-07-09-oscar-jdbc-driver.md  2026-07-11-vnc-frame-memory-performance.md
docs/superpowers/specs/: 2026-07-04-termius-import-design.md  2026-07-05-tree-sitter-language-bundle-design.md  2026-07-08-opencode-acp-design.md  2026-07-09-oscar-jdbc-driver-design.md  2026-07-11-vnc-frame-memory-performance-design.md
drivers/mongodb-driver/: Cargo.toml
drivers/mongodb-driver/src/: common.rs  legacy.rs  lib.rs  modern.rs
drivers/mongodb-legacy-3-2-driver/: Cargo.toml
drivers/mongodb-legacy-3-2-driver/src/: main.rs
extensions/acp-agent/claude-acp/: acp_agent.json  extension.build.json
extensions/acp-agent/codex-acp/: acp_agent.json  extension.build.json
extensions/acp-agent/opencode-acp/: acp_agent.json  extension.build.json
extensions/ipc/dm/: driver.json  extension.build.json
extensions/ipc/duckdb/: Cargo.toml  driver.json  extension.build.json
extensions/ipc/gbase8s/: driver.json  extension.build.json
extensions/ipc/iotdb/: Cargo.toml  driver.json  extension.build.json
extensions/ipc/kingbase/: driver.json  extension.build.json
extensions/ipc/mongodb-legacy/: driver.json  extension.build.json
extensions/ipc/mongodb-legacy-3-2/: driver.json  extension.build.json
extensions/ipc/mongodb-modern/: driver.json  extension.build.json
extensions/ipc/oceanbase/: driver.json
extensions/ipc/opengauss/: Cargo.toml  driver.json  extension.build.json
extensions/ipc/oracle-go/: driver.json
extensions/ipc/oscar/: driver.json  extension.build.json
extensions/ipc/redis/: Cargo.toml  driver.json  extension.build.json
extensions/ipc/redis/src/: main.rs
extensions/language-bundle/tree-sitter-languages/: extension.build.json  manifest.json
extensions/language/astro/: extension.build.json  injections.scm  manifest.json  parser.wasm
extensions/language/c/: extension.build.json  manifest.json  parser.wasm
extensions/language/cmake/: extension.build.json  manifest.json  parser.wasm
extensions/language/cpp/: extension.build.json  manifest.json
extensions/language/csharp/: extension.build.json  manifest.json
extensions/language/css/: extension.build.json  manifest.json
extensions/language/diff/: extension.build.json  manifest.json  parser.wasm
extensions/language/ejs/: extension.build.json  manifest.json  parser.wasm
extensions/language/elixir/: extension.build.json  manifest.json
extensions/language/erb/: extension.build.json  manifest.json  parser.wasm
extensions/language/go/: extension.build.json  manifest.json
extensions/language/graphql/: extension.build.json  manifest.json  parser.wasm
extensions/language/html/: extension.build.json  manifest.json
extensions/language/java/: extension.build.json  (+1 more)
extensions/mcp-helper/onetcli-public-mcp/: Cargo.toml  extension.build.json  mcp_helper.json
extensions/mcp-helper/onetcli-public-mcp/src/: discovery.rs  launcher.rs  main.rs
extensions/remote-desktop/rdp-helper/: Cargo.toml
extensions/remote-desktop/rdp-helper/src/: clipboard.rs  clipboard_tests.rs  main.rs  output_mailbox.rs  output_mailbox_tests.rs  protocol.rs  protocol_tests.rs  rdp.rs
extensions/remote-desktop/rdp-helper/src/rdp/: config.rs  output.rs
extensions/remote-desktop/vnc-helper/: Cargo.toml
extensions/remote-desktop/vnc-helper/src/: framebuffer.rs  main.rs  output_mailbox.rs  protocol.rs  protocol_tests.rs  runtime.rs  vnc_encoding.rs  vnc_input.rs  vnc_rfb.rs
extensions/wasm/dbeaver-importer/: Cargo.toml  extension.build.json  extension.json
extensions/wasm/dbeaver-importer/src/: common.rs  component.rs  dbeaver.rs  lib.rs  model.rs
extensions/wasm/math-renderer/: Cargo.toml  extension.build.json  extension.json
extensions/wasm/math-renderer/src/: lib.rs
extensions/wasm/math-renderer/wit/: document-renderer.wit
extensions/wasm/mermaid-renderer/: Cargo.toml  extension.build.json  extension.json
extensions/wasm/mermaid-renderer/src/: lib.rs
extensions/wasm/mermaid-renderer/wit/: document-renderer.wit
extensions/wasm/notes-document-export-core/: Cargo.toml
extensions/wasm/notes-document-export-core/src/: lib.rs
extensions/wasm/xshell-importer/: Cargo.toml  extension.build.json  extension.json
extensions/wasm/xshell-importer/src/: component.rs  lib.rs  xshell.rs  xshell_tests.rs
internal/dbipc/: config.go  errors.go  query.go  server.go  server_test.go
internal/ipc/: framing.go  framing_test.go  socket.go  socket_test.go
internal/runner/: runner.go  runner_test.go
java/gbase8s-ipc-driver/: pom.xml
java/oscar-ipc-driver/: pom.xml
scripts/: build-go-driver.sh  build-java-driver.sh  changed-extensions.mjs  generate-marketplace-manifest.mjs  install-local-acp-agents.sh  install-local-drivers.sh  install-local-languages.sh  install-local-mcp-helpers.sh  install-local-remote-desktop-providers.sh  package-acp-agent.sh  package-composite-extension.sh  package-driver.sh  package-language-bundle-extension.sh  package-language-extension.sh  package-mcp-helper.sh  release-driver.mjs  sync-tree-sitter-language-extensions.mjs  verify-acp-agent-package.sh  verify-composite-package.sh  verify-language-bundle-package.sh  verify-language-package.sh  verify-mcp-helper-package.sh  verify-package.sh
tests/: scripts.test.mjs
wit/: connection-import.wit  document-exporter.wit
(+319 files in other folders)
