[workspace]
members = [
    "extensions/ipc/duckdb",
    "extensions/ipc/opengauss",
    "extensions/wasm/dbeaver-importer",
    "extensions/wasm/jetbrains-importer",
    "extensions/wasm/mongodb-compass-importer",
    "extensions/wasm/navicat-importer",
    "extensions/wasm/openssh-config-importer",
    "extensions/wasm/redis-desktop-importer",
    "extensions/wasm/tableplus-importer",
    "extensions/wasm/xshell-importer",
]
resolver = "2"

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
base64 = "0.22"
chrono = { version = "0.4.23", features = ["serde"] }
duckdb = { version = "1.10504.0", features = ["bundled"] }
extension-driver = { git = "https://github.com/feigeCode/navop", branch = "dev" }
extension-host = { git = "https://github.com/feigeCode/navop", branch = "dev" }
extension-protocol = { git = "https://github.com/feigeCode/navop", branch = "dev" }
hex = "0.4"
interprocess = { version = "2.4.0", features = ["tokio"] }
native-tls = { version = "0.2", features = ["vendored"] }
opengauss-native-tls = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio-opengauss = { version = "0.1.0", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio = { version = "1", features = ["io-util", "rt-multi-thread", "macros", "sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
