[package]
name = "onetcli-public-mcp"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[[bin]]
name = "onetcli-public-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "time"] }
