[package]
name = "navop-rdp-helper"
version = "0.2.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
anyhow = "1"
ironrdp = { git = "https://github.com/feigeCode/IronRDP", rev = "5f4b61a", features = [
    "connector",
    "cliprdr",
    "input",
    "pdu",
] }
ironrdp-client = { git = "https://github.com/feigeCode/IronRDP", rev = "5f4b61a", default-features = false, features = [
    "native-tls",
] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
whoami = "1"

[dev-dependencies]
tempfile = "3"
