[package]
name = "navop-vnc-helper"
version = "0.2.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "rt", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vnc_client = { package = "vnc-rs", version = "0.5.3" }
