[package]
name = "math_renderer_wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kymo-tex-layout = "0.1.11"
kymo-tex-parser = "0.1.11"
kymo-tex-svg = { version = "0.1.11", features = ["embed-fonts"] }
kymo-tex-types = "0.1.11"
wit-bindgen = "0.57.1"

[workspace]
