[package]
name = "xshell_importer_wasm"
version = "0.1.3"
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
encoding_rs = "0.8.35"
serde.workspace = true
serde_json.workspace = true
wit-bindgen = "0.57.1"
zip = { version = "6.0.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
